Several updates to instructions and descriptions

--- a/Lab 1 - Project Setup.ipynb
+++ b/Lab 1 - Project Setup.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Lab 1: Environment Setup and Testing\n",
     "\n",
-    "This lab provides a hands-on introduction to building AI agents with Azure AI Foundry. Here you will set up your Azure AI environment, deploy essential language and embedding models, create necessary services, and configure connectivity to your AI project. At the end of this lab, you’ll validate your setup by sending a test chat completion to your deployed model, ensuring your environment is ready for advanced AI agent development in subsequent labs.\n",
+    "In this lab you will set up your Azure AI Foundry resource and project, deploy essential language and embedding models, create necessary services, and setup necessary permissions and configurations.Finally, you’ll validate your setup by sending a test chat completion to your deployed model, ensuring your environment is ready for AI agent development in subsequent labs.\n",
     "\n",
-    "NOTE: Be sure you have the necessary pre-requisites setup, as outlined in the [Project README](README.md) document, before proceeding to step 1."
+    "NOTE: **Be sure you have the necessary pre-requisites setup**, as outlined in the [Project README](README.md) document, before proceeding to step 1."
    ]
   },
   {
@@ -25,15 +25,15 @@
    "source": [
     "#### Step 1: Create AI Foundry Resource and project in Azure AI Foundry </h4>\n",
     "\n",
-    "In this lab we will be setting up and using an Azure AI Foundry resource instead of a AI hub resource. This new resource type in Azure in Azure AI Foundry is for designing, customizing, and managing AI apps and agents at scale. You will have access to the latest industry models using a serverless hosting model. This resource is recommended for most applications you build in Azure AI Foundry. NOTE: these labs are only compatible with the Azure AI Foundry resource type, which leverage the latest SDKs. These labs will not work with the older AI Hub resource type.\n",
+    "In this lab we will be setting up and using an Azure AI Foundry resource instead of a AI hub resource. This new resource type in Azure AI Foundry is for designing, customizing, and managing AI apps and agents at scale. You will have access to the latest industry models using a serverless hosting model. This resource is recommended for most applications you build in Azure AI Foundry. NOTE: these labs are only compatible with the Azure AI Foundry resource type, which leverage the latest SDKs. These labs will not work with the older AI Hub resource type.\n",
     "\n",
-    "1. Navigate to Azure AI Foundry at https://ai.azure.com\n",
-    "2. Select on 'Create new' at the top right of the screen\n",
-    "3. Select 'Azure AI Foundry resource' and click next\n",
+    "1. Navigate to Azure AI Foundry at **https://ai.azure.com**\n",
+    "2. If you do not already have an Azure AI Foundry resource and project stood up, select **'Create new'** at the top right of the screen\n",
+    "3. Select **'Azure AI Foundry resource'** and click next\n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "4. On the 'Create a project' page, give your project a name. Expand the advanced options. Select the appropriate values and re-name resources as needed. Click 'Create'. NOTE: Once your resource and project are created, additional data, privacy, and security policies can be applied or modified in the Azure portal as needed.\n",
+    "4. On the **'Create a project'** page, give your project a name. Expand the advanced options. Select the appropriate values and re-name resources as needed. Click 'Create'. NOTE: Once your resource and project are created, additional data, privacy, and security policies can be applied or modified in the Azure portal as needed.\n",
     "\n",
     "![image-2.png](attachment:image-2.png)"
    ]
@@ -84,8 +84,8 @@
     "\n",
     "If you are working in a project team with 2 or more members, only one person needs to perform the below steps. Once deployed, this model will be available to everyone in the project to use. For learning purposes, you can screenshare this part of the setup to your project team.\n",
     "\n",
-    "1. In your AI Foundry project, under 'My assets' section, click on the 'Models + endpoints'.\n",
-    "2. Click on 'Deploy model' and 'Deploy base model'.\n",
+    "1. In your AI Foundry project, under 'My assets' section, click on the **'Models + endpoints'**.\n",
+    "2. Click on **'Deploy model'** and **'Deploy base model'**.\n",
     "3. Select gpt-4o* and then press **Confirm**.\n",
     "4. Select **Customize** and set the **Model version** to 2024-08-06 and the **Tokens per Minute Rate Limit** to 200k.\n",
     "\n",
@@ -141,12 +141,12 @@
     "\n",
     "The next steps are needed for the AI search resource to be able to vectorize the health plan documents in Lab 4:\n",
     "\n",
-    "4. Navigate to the **Storage Account** that was created above. **Assign the 'Storage Blob Data Reader role' to the search service identity**, as shown here:\n",
+    "1. Navigate to the **Storage Account** that was created above. **Assign the 'Storage Blob Data Reader role' to the search service identity**, as shown here:\n",
     "\n",
     "![Sample Photo](images/blob-roleassign.jpg)\n",
     "\n",
     "\n",
-    "6. Navigate to your **Azure AI Search resource** that was created above. **Assign two roles to your project's managed identity: the 'Search Index Data Reader' role and the 'Search Service Contributor' role**, as shown below.\n",
+    "2. Navigate to your **Azure AI Search resource** that was created above. **Assign two roles to your project's managed identity: the 'Search Index Data Reader' role and the 'Search Service Contributor' role**, as shown below.\n",
     "\n",
     "![Sample Photo](images/aisearch-role-assign1.jpg)\n",
     "\n",
@@ -156,7 +156,7 @@
     "\n",
     "##### User permissions:\n",
     "\n",
-    "**If you are the OWNER of your resource group and created the above services yourself, you inherit these user permissions and DO NOT need to add the below role assignments**, you can proceed to the next step. Otherwise, if you are a user, check to ensure the below role assignments are added for you.\n",
+    "**If you have contributor or higher permissions on a resource group, you inherit these user permissions and DO NOT need to add the below role assignments**, you can proceed to the next step. Otherwise, if you are a user, check to ensure the below role assignments are added for you.\n",
     "\n",
     "TIP: if you are working on project teams and need to assign permissions to multiple users, you can add these permissions faster by creating a Entra ID security group (so you do not have to add users one-by-one) and by running Azure CLI scripts in Azure Cloud Shell.\n",
     "\n",
@@ -190,39 +190,56 @@
    "source": [
     "#### Step 8: Install dependencies, create a virtual environment, and create an environment variables file\n",
     "\n",
-    "1. Open a new terminal and navigate to the AZURE-AI-AGENTS-LABS project directory if you are not there already. Run the below commands to create and activate your virtual environment:\n",
+    "1. Open a new terminal and navigate to the AZURE-AI-AGENTS-LABS project directory if you are not there already. Run the below commands to create and activate your Python virtual environment:\n",
     "    \n",
-    "    In powershell terminal (Windows):\n",
-    "    \n",
-    "        python -m venv venv\n",
-    "        venv/Scripts/activate\n",
-    "    \n",
+    "    In powershell terminal (Windows):        \n",
+    "    ```bash\n",
+    "    python -m venv venv\n",
+    "    venv/Scripts/activate\n",
+    "    ```\n",
+    "\n",
     "    In zsh terminal (Mac):\n",
+    "    ```bash\n",
+    "    python -m venv venv\n",
+    "    source venv/bin/activate\n",
+    "    ```\n",
     "    \n",
-    "        python -m venv venv\n",
-    "        source venv/bin/activate    \n",
-    "    \n",
+    "    In bash terminal (Github Codespaces):\n",
+    "    ```bash\n",
+    "    python -m venv venv\n",
+    "    venv/bin/activate\n",
+    "    ```\n",
+    "\n",
     "2. Still in the AZURE-AI-AGENTS-LABS project directory, run the below command in your terminal. This installs all the required packages:\n",
     "    \n",
-    "        pip install -r requirements.txt\n",
+    "    ```bash\n",
+    "    pip install -r requirements.txt\n",
+    "    ```\n",
+    "    NOTE: If you are running this on a Mac and get an error regarding the installation of the pywin package, simply navigate to the requirements.txt file, comment out the package as shown below, save requirements.txt and run the above command again to finish install the remaining packages.\n",
+    "\n",
+    "    ```python\n",
+    "    #pywin32==308\n",
+    "    ```\n",
     "\n",
     "    NOTE: if there are any additional package dependecies that require installation, VS Code will prompt you to install these. If asked, go ahead and install.\n",
     "\n",
     "3. Still in the AZURE-AI-AGENTS-LABS project directory, run the below command in your terminal. This creates your .env file:\n",
     "    \n",
-    "        cp sample.env .env\n",
+    "    ```bash\n",
+    "    cp sample.env .env\n",
+    "    ```\n",
     "\n",
     "4. Locate your newly created .env file and upate it with your environment variables:\n",
-    "    1. Replace 'AIPROJECT_ENDPOINT' in your .env with your Azure AI Foundry project endpoint and 'API_KEY' with your API key, both of which can found in the the **Overview** page of your project:\n",
+    "    - Replace 'AIPROJECT_ENDPOINT' in your .env with your Azure AI Foundry project endpoint and 'API_KEY' with your API key, both of which can found in the the **Overview** page of your project:\n",
     "    \n",
     "    ![image-3.png](attachment:image-3.png)\n",
     "\n",
-    "    2. You also need to update 'CHAT_MODEL' in your .env with your gpt-4o model deployment name and update 'CHAT_MODEL_ENDPOINT' in your .env with your model endpoint, both of which can be found in the **Models + endpoints** under **My assets**. Click on the `gpt-4o` model that you have deployed and you will see these values:\n",
+    "    - You also need to update 'CHAT_MODEL' in your .env with your gpt-4o model deployment name and update 'CHAT_MODEL_ENDPOINT' in your .env with your model endpoint, both of which can be found in the **Models + endpoints** under **My assets**. Click on the `gpt-4o` model that you have deployed and you will see these values:\n",
     "\n",
     "    ![image-2.png](attachment:image-2.png)\n",
     "\n",
-    "5. Save .env file after updating.\n",
-    "6. Once your .env file is saved, click 'restart' at the top of this notebook to restart the kernel. This clears all variables, imports, and state from memory, and starts a fresh Python process, making sure our code is using the latest values.\n",
+    "5. **Save your .env file** after updating.\n",
+    "6. Once your .env file is saved, click 'restart' at the top of this notebook to **restart the kernel**. This clears all variables, imports, and state from memory, and starts a fresh Python process, making sure our code is using the latest values.\n",
     "\n",
     "    ![image.png](attachment:image.png)"
    ]
@@ -233,16 +250,18 @@
    "source": [
     "### Step 9: Login to your Azure subscription\n",
     "\n",
-    "In your terminal, run the below command to login to your Azure account. When prompted, select your subscription. This allows us to use the token-based authentication method, DefaultAzureCredential, which is required for subsequent labs. Key-based authentication, using the AzureKeyCredential method, may also work, but the code in the labs will need to be refactored accordingly.\n",
+    "In your terminal, run the below CLI command to login to your Azure account. When prompted, select your subscription. This allows us to use the token-based authentication method, DefaultAzureCredential, which is required for subsequent labs. Key-based authentication, using the AzureKeyCredential method, may also work, but the code in the labs will need to be refactored accordingly.\n",
     "\n",
-    "az login"
+    "```bash\n",
+    "az login\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 10: Test your lab environment\n",
+    "### Step 10: Test your lab environment\n",
     "\n",
     "To test that your lab was setup successfully, run the below code that sends a message to the deployed model, asking it to tell a joke."
    ]
@@ -278,7 +297,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Option #1 (preferred method): Using token-based authentication using DefaultAzureCredential"
+    "##### Option #1 (preferred method): Using token-based authentication using DefaultAzureCredential\n",
+    "\n",
+    "This method is recommended because it provides secure, seamless authentication using your Azure login and supports best practices for managing credentials in both development and production environments. Also, these labs were built using DefaultAzureCredential, so using this method will be the easiest approach for running the code in subsequent labs.\n"
    ]
   },
   {
@@ -297,7 +318,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Option #2 (only use if token-based authentication is unavailable): Using key-based authentication with AzureKeyCredential"
+    "##### Option #2 (only use if token-based authentication is unavailable): Using key-based authentication with AzureKeyCredential\n",
+    "\n",
+    "This method is not recommended for production scenarios because it requires managing and exposing API keys, which is less secure and more difficult to maintain than token-based authentication. Even if you use this approach in these labs, you may need to modify code in other notebooks to ensure they use AzureKeyCredential instead of DefaultAzureCredential."
    ]
   },
   {
@@ -313,22 +336,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Chat with your model\n",
+    "\n",
+    "This code sends a chat message to your deployed model and prints the AI's response, allowing you to verify your environment is working correctly.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure! Why did the teddy bear say no to dessert? \n",
-      "\n",
-      "Because it was already stuffed!\n"
+      "Why did the teddy bear say no to dessert? Because it was already stuffed! 🐻🍰\n"
      ]
     }
    ],
    "source": [
     "# Chat with the gpt-4o model\n",
+    "# Make sure you run the above code cell to instantiate the client first\n",
     "chat = project.inference.get_chat_completions_client()\n",
     "response = chat.complete(\n",
     "    model=os.getenv(\"CHAT_MODEL\"), # gpt-4o model from your project\n",
