--- a/Lab 3 - Create A Simple AI Agent.ipynb
+++ b/Lab 3 - Create A Simple AI Agent.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Lab 3: Create a Simple AI Agent\n",
     "\n",
-    "In this lab, we'll introduce you to AI agents by creating a simple agent that will create a bar graph based on data that we give to it. "
+    "This lab guides you through the process of building a simple AI agent using Azure AI Agents Service SDK. You will learn how to connect to your Azure AI project, create an agent with code interpretation capabilities, and interact with the agent to generate a bar chart from provided data. By the end of this lab, you’ll understand the basics of agent creation, message threading, and file retrieval in the Azure AI ecosystem."
    ]
   },
   {
@@ -18,9 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "from typing import Any\n",
@@ -43,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First try with token-based authentication, which is recommended\n",
+    "# Connect to Azure AI Foundry project using DefaultAzureCredential, a type of token-based authentication.\n",
     "project = AIProjectClient(\n",
     "    endpoint=os.getenv(\"AIPROJECT_ENDPOINT\"),\n",
     "    credential=DefaultAzureCredential()\n",
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +82,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 3: Create the simple AI Agent"
+    "#### Step 3: Create the simple AI Agent\n",
+    "\n",
+    "This step demonstrates how to use the Azure AI Agents SDK to create and interact with an AI agent that can interpret code. The process includes:\n",
+    "- Initializing a code interpreter tool and creating an agent with it.\n",
+    "- Creating a communication thread for the agent.\n",
+    "- Sending a message to the agent with a request to generate a bar chart from provided health plan data.\n",
+    "- Running the agent and monitoring the run status.\n",
+    "- Retrieving and displaying all messages in the thread, and downloading any generated image file.\n",
+    "- Cleaning up by deleting the agent after the process is complete.\n",
+    "\n",
+    "This workflow shows how to automate data analysis and visualization tasks using conversational AI agents in Azure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created agent, ID: asst_GHahVvbqJBXKBaj4llrdjtMD\n",
+      "Created thread, ID: thread_3pvOhXfmSl9c8fQRafyZ2wfT\n",
+      "Created thread, ID: thread_3pvOhXfmSl9c8fQRafyZ2wfT\n",
+      "Created message, ID: msg_2TXDCTAuhcjxwPhUiVTROHyq\n",
+      "Created message, ID: msg_2TXDCTAuhcjxwPhUiVTROHyq\n",
+      "Run finished with status: RunStatus.COMPLETED\n",
+      "Conversation:\n",
+      "Run finished with status: RunStatus.COMPLETED\n",
+      "Conversation:\n",
+      "MessageRole.AGENT: [{'type': 'image_file', 'image_file': {'file_id': 'assistant-9XWgEbEwmqsTHvJea3FHx7'}}, {'type': 'text', 'text': {'value': 'The bar chart for the health plan comparison has been created and saved as `health-plan-comparison.png`. You can download it using the link below:\\n\\n[Download the chart](sandbox:/mnt/data/health-plan-comparison.png)', 'annotations': [{'type': 'file_path', 'text': 'sandbox:/mnt/data/health-plan-comparison.png', 'start_index': 169, 'end_index': 213, 'file_path': {'file_id': 'assistant-KDCJc9s9ondMgqrNeVsFKM'}}]}}]\n",
+      "MessageRole.AGENT: [{'type': 'image_file', 'image_file': {'file_id': 'assistant-9XWgEbEwmqsTHvJea3FHx7'}}, {'type': 'text', 'text': {'value': 'The bar chart for the health plan comparison has been created and saved as `health-plan-comparison.png`. You can download it using the link below:\\n\\n[Download the chart](sandbox:/mnt/data/health-plan-comparison.png)', 'annotations': [{'type': 'file_path', 'text': 'sandbox:/mnt/data/health-plan-comparison.png', 'start_index': 169, 'end_index': 213, 'file_path': {'file_id': 'assistant-KDCJc9s9ondMgqrNeVsFKM'}}]}}]\n",
+      "Saved image file to: c:\\VS-Code\\Git-Repos\\elsafecke-azure-ai-agents-labs\\azure-ai-agents-labs\\health-plan-comparison.png\n",
+      "MessageRole.USER: [{'type': 'text', 'text': {'value': 'Could you please create a bar chart for the using the following data and provide the file to me? Name the file as health-plan-comparision.png.\\n\\nHere is the data:\\nProvider        Monthly Premium    Deductible    Out-of-Pocket Limit\\nNorthwind       $300               $1,500        $6,000\\nAetna           $350               $1,000        $5,500\\nUnited Health   $250               $2,000        $7,000\\nPremera         $200               $2,200        $6,500\\n', 'annotations': []}}]\n",
+      "Saved image file to: c:\\VS-Code\\Git-Repos\\elsafecke-azure-ai-agents-labs\\azure-ai-agents-labs\\health-plan-comparison.png\n",
+      "MessageRole.USER: [{'type': 'text', 'text': {'value': 'Could you please create a bar chart for the using the following data and provide the file to me? Name the file as health-plan-comparision.png.\\n\\nHere is the data:\\nProvider        Monthly Premium    Deductible    Out-of-Pocket Limit\\nNorthwind       $300               $1,500        $6,000\\nAetna           $350               $1,000        $5,500\\nUnited Health   $250               $2,000        $7,000\\nPremera         $200               $2,200        $6,500\\n', 'annotations': []}}]\n",
+      "Deleted agent\n",
+      "Deleted agent\n"
+     ]
+    }
+   ],
    "source": [
     "code_interpreter = CodeInterpreterTool()\n",
     "with project:\n",
