--- a/Lab 4 - Create A RAG Agent.ipynb
+++ b/Lab 4 - Create A RAG Agent.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Lab 4: Build a Search Agent\n",
     "\n",
-    "In this lab, we'll use the Azure AI Agent Service to create an agent that is able to retrieve information from documents stored in Azure AI Search, a vector database. This pattern is known as retrieval augmented generation or RAG. The documents that we'll be searching are health insurance policies."
+    "In this lab, you will learn how to build a retrieval-augmented generation (RAG) agent using the Azure AI Agent Service SDK. You’ll connect your agent to Azure AI Search—a vector database containing health insurance policy documents—and configure it to retrieve relevant information in response to user queries. This hands-on exercise will guide you through connecting resources, creating a search index, vectorizing documents, and building an agent capable of intelligent document search. By the end of this lab, you’ll understand the RAG pattern and how to implement it with Azure AI services for real-world scenarios."
    ]
   },
   {
@@ -86,7 +86,12 @@
    "source": [
     "### Part 3: Create the Search Agent\n",
     "\n",
-    "Now that we've vectorized our health plan documents and created an index, we can create a Search Agent that will retreive information about our health plans from the index.\n"
+    "Now that we've vectorized our health plan documents and created an index, we can build a Search Agent using the Azure AI Agent Service SDK. This agent will leverage the Azure AI Search index to retrieve relevant information from your health plan documents in response to user queries. In this section, you'll:\n",
+    "- Connect your code to the Azure AI Search index you created earlier\n",
+    "- Define and configure a search agent with the appropriate tools and resources\n",
+    "- Interact with the agent to perform intelligent, context-aware document retrieval\n",
+    "\n",
+    "This hands-on exercise demonstrates how retrieval-augmented generation (RAG) can be implemented programmatically, enabling your agent to provide accurate, document-grounded answers using Azure AI services."
    ]
   },
   {
@@ -98,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +112,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,18 +151,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 3: Connect to your Azure AI Search index"
+    "#### Step 3: Connect to your Azure AI Search index\n",
+    "\n",
+    "Make sure to update the below code cell with your index name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my-index\n"
+     ]
+    }
+   ],
    "source": [
     "# First enter the name of your search index\n",
     "\n",
-    "index_name=\"<my-index-name>\""
+    "index_name=\"<my-index-name>\"\n",
+    "print(index_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code retrieves the connection ID for your Azure AI Search resource, then defines and configures the search tool and its resources. It ensures your agent is set up to access the correct search index, enabling it to perform document retrieval using the Azure AI Agent Service SDK."
    ]
   },
   {
@@ -195,7 +218,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 4: Define the search agent"
+    "#### Step 4: Define the search agent\n",
+    "\n",
+    "In this step, you will define and create the search agent using the Azure AI Agent Service SDK. The agent is configured with the GPT-4o model, a descriptive name, instructions for its behavior, and the search tool and resources you set up previously. This setup enables the agent to process user queries and retrieve relevant information from your Azure AI Search index, making it capable of intelligent, document-grounded search."
    ]
   },
   {
@@ -219,7 +244,13 @@
    "source": [
     "#### Step 5: Chat with the search agent\n",
     "\n",
-    "Let's test our search agent by asking it to give us information about the Northwind Standard health plan."
+    "In this step, you'll interact with your search agent by sending it a user query and processing its response. The code demonstrates how to:\n",
+    "- Create a conversation thread with an initial user message\n",
+    "- Run the agent to process the query using the Azure AI Agent Service SDK\n",
+    "- Retrieve and display the agent's response, which is grounded in the indexed health plan documents\n",
+    "- Clean up by deleting the agent after use\n",
+    "\n",
+    "This hands-on interaction shows how retrieval-augmented generation (RAG) enables your agent to provide accurate, document-based answers to natural language questions."
    ]
   },
   {
