--- a/Lab 5 - Develop A Mult-Agent System.ipynb
+++ b/Lab 5 - Develop A Mult-Agent System.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,18 +98,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my-index\n"
+     ]
+    }
+   ],
    "source": [
     "# First enter the name of your search index\n",
     "\n",
-    "index_name=\"<my-index-name>\""
+    "index_name=\"<my-index-name>\"\n",
+    "print(index_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,8 +237,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The orchestration code below...\n",
+    "- Defines an `orchestrate` function to coordinate the multi-agent workflow for a given health plan name:\n",
+    "  - The Search Agent retrieves information about the specified health plan from Azure AI Search.\n",
+    "  - The Report Agent generates a detailed report using the information returned by the Search Agent.\n",
+    "  - The Validation Agent checks that the report includes required content (coverage exclusions) and returns 'Pass' or 'Fail'.\n",
+    "  - If validation passes, the report is saved to a markdown file; otherwise, a message is printed indicating the report did not meet requirements.\n",
+    "- Defines a helper function to extract the last agent/assistant message from a list of messages.\n",
+    "- Provides a command-line interface to interactively enter health plan names, generate reports, and exit the system.\n",
+    "- Cleans up by deleting all agents when finished."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
